fix: #1567 remove `rating` border radius on mobile

--- a/src/components/unstyled/rating.css
+++ b/src/components/unstyled/rating.css
@@ -1,6 +1,6 @@
 .rating {
   @apply relative inline-flex;
   :where(input) {
-    @apply cursor-pointer;
+    @apply cursor-pointer rounded-none;
   }
 }
